--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "Christopher Alexander",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.2",
-    "http-status-codes": "^2.2.0"
+    "axios": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
