--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Threadpool connects InkSoft and Printful",
   "main": "index.js",
   "scripts": {
+    "build": "rollup -c rollup.config.js --bundleConfigAsCjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christopher Alexander",
@@ -12,6 +13,11 @@
     "axios": "^1.2.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.3.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
@@ -20,6 +26,8 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-watch": "^8.0.0",
-    "typescript": "^4.9.4"
+    "rollup": "^3.9.1",
+    "rollup-plugin-zip": "^1.0.3",
+    "typescript": "4.8"
   }
 }
