--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.2",
     "cache-manager": "^5.1.4",
     "fast-redact": "^3.1.2",
+    "mustache": "^4.2.0",
     "type-fest": "^3.5.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/cache-manager": "^4.0.2",
     "@types/command-line-args": "^5.2.0",
     "@types/fast-redact": "^3.0.2",
+    "@types/mustache": "^4.2.2",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
